# asdf-segment

./: README.md  context.md  pyproject.toml
asdf_segment/: __main__.py  io.py  keybindings.py  labels.py  modes.py  mouse.py  viewer.py
asdf_segment/widgets/: label_table.py  save_panel.py
tests/: test_io.py  test_labels.py
